--- a/SliderTestimoniosFRONTEND-master/createform.html
+++ b/SliderTestimoniosFRONTEND-master/createform.html
@@ -9,7 +9,7 @@
 <body>
     <header class="hero">
         <nav class="nav container">
-            <div class="nav__logo">
+            <div>
                 <h2 class="nav__title">Admin</h2>
             </div>
             <ul class="nav__link nav__link--menu">
